Actualização do relatório com as tuas alterações

--- a/EG/AV0/relatorio.tex
+++ b/EG/AV0/relatorio.tex
@@ -19,18 +19,25 @@
 \setlength{\parskip}{2pt}
 
 
-%Como não sei de que formas costumas colocar os autores (se com o \author ou outro), não coloquei,
-%mas depois podes colocar tu:
-%--> António Silva, pg22820
-%--> Rui Brito, pg.....
-
 
 \title{
 	\large{\includegraphics[width=0.3\textwidth]{../../report-template/UM}} \\
 	\large{Universidade do Minho} \\
+	\large{Mestrado em Engenharia Informática} \\
+	\large{Engenharia de Linguagens} \\
+	\large{Engenharia Gramatical - Grupo 1} \\	
+	\large{\textbf{Resolução das Fichas 3 e 5}} \\
+	\large{Ano Lectivo de 2012/2013} \\
 	\date{\today}
 }
 
+\author{	
+	\begin{tabular}[t]{c c}      
+        pg22820 - \textbf{António Silva} \\        
+		pg22781 - \textbf{Rui Brito} \\   				
+	\\ 
+	\end{tabular}
+}
 
 \begin{document}
 
