Adição do ficheiro do VisualLisa com resolução da AV1 Adição de imagens a mostrar a GA Início do relatório.

--- a/EG/AV1/report/relatorio.tex
+++ b/EG/AV1/report/relatorio.tex
@@ -52,6 +52,14 @@
 \newpage
 
 \section{Introdução}
+\section{Resolução}
+\subsecion{Lista-Conteudo}
+\subsecion{Conteudo-Conteudo_Elemento}
+\subsecion{Conteudo-Elemento}
+\subsecion{Elemento-String}
+\subsecion{Elemento-Integer}
+%Colocar as imagens nos vários locais com uma pequena explicação, não há muito a dizer, só mesmo nas duas 
+%últimas produções é que nécessário explicar mais um bocado.
 \section{Conclusão}
 
 \end{document}
