--- a/EG/AV2/report/relatorio.tex
+++ b/EG/AV2/report/relatorio.tex
@@ -27,7 +27,7 @@
 	\large{Mestrado em Engenharia Informática}  \\
 	\large{Engenharia de Linguagens}  \\
 	\large{Engenharia Gramatical - Grupo 1}  \\	
-	\large{\textbf{Resolução da Avaliação 1}} \\
+	\large{\textbf{Resolução da Avaliação 2}} \\
 	\large{Ano Lectivo de 2012/2013} \\
 	\date{\today}
 }
@@ -178,5 +178,5 @@ Por fim, e como pedido no enunciado, foi usado o método \emph{toDotFormat()} da
 
 
 \section{Conclusão}
-Após a resolução desta ficha de avaliação, julgamos que todos os objectivos foram cumpridos com sucesso. De uma forma geram a ficha foi fácil de resolver, houveram alguns pequenos contratempos, mas nada que comprometesse os resultados finais. 
+Após a resolução desta ficha de avaliação, julgamos que todos os objectivos foram cumpridos com sucesso. De uma forma geral a ficha foi fácil de resolver, houveram alguns pequenos contratempos, mas nada que comprometesse os resultados finais. 
 \end{document}
