--- a/PI/BibTeX-toDB/jj.bib
+++ b/PI/BibTeX-toDB/jj.bib
@@ -1849,8 +1849,7 @@ and Fernando Perdigão},
   pages = {121--127},
   publisher = {Springer},
   month = {April},
-  journal = {Computational Processing of the Portuguese Language,
-Lecture Notes for Artificial Intelligence},
+  journal = {Computational Processing of the Portuguese Language, Lecture Notes for Artificial Intelligence},
 }
 
 
